feat: display all json data on page

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,22 @@
 .content {
-    height: calc(100vh - 304px);
+    min-height: calc(100vh - 304px);
 }
 
 .btn-large {
     margin: 5px 0;
+}
+
+.weapons-display {
+    padding: 50px 5vw;
+}
+
+.card.horizontal {
+    width: 200px;
+}
+
+.weaponsDisplayContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
